Editing AccountTypeManager Editing ParentRetailAccountFieldFormula
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43001

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/DataRecordFieldFormulas/Templates/ParentAccountFieldFormulaTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/DataRecordFieldFormulas/Templates/ParentAccountFieldFormulaTemplate.html
@@ -2,13 +2,26 @@
     <vr-select datasource="scopeModel.fields"
                datatextfield="fieldTitle"
                datavaluefield="fieldName"
-               selectedvalues="scopeModel.selectedAccount"
-               onselectionchanged="scopeModel.onAccountSelectionChanged"
+               selectedvalues="scopeModel.selectedAccountType"
                entityname="Field Name"
-               label="Subscriber Zone Field Name"
+               label="Account Type Field Name"
                isrequired="true" hideremoveicon>
     </vr-select>
 </vr-columns>
-<span ng-show="scopeModel.showAccountTypeSelector" vr-loader="scopeModel.isAccountTypeSelectorLoading">
-    <retail-be-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady" normal-col-num="4" isrequired="true"></retail-be-accounttype-selector>
+<vr-columns width="1/3row">
+    <vr-select datasource="scopeModel.fields"
+               datatextfield="fieldTitle"
+               datavaluefield="fieldName"
+               selectedvalues="scopeModel.selectedAccount"
+               onselectionchanged="scopeModel.onAccountSelectionChanged"
+               entityname="Field Name"
+               label="Account Field Name"
+               isrequired="true" hideremoveicon>
+    </vr-select>
+</vr-columns>
+<span ng-show="scopeModel.selectedAccount != undefined" vr-loader="scopeModel.isParentAccountTypeSelectorLoading">
+    <retail-be-accounttype-selector on-ready="scopeModel.onParentAccountTypeSelectorReady"
+                                    customlabel="Parent Account Type" normal-col-num="4"
+                                    isrequired="true" hideremoveicon>
+    </retail-be-accounttype-selector>
 </span>
