Implement supplier effective day offset
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43012

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
@@ -128,6 +128,11 @@
                             <vr-switch value="scopeModel.supIncludeProcessingTimeZone" label="Processing Time Zone" />
                         </vr-columns>
                     </vr-row>
+                    <vr-row>
+                        <vr-columns width="1/2row">
+                            <vr-textbox value="scopeModel.supplierEffectiveDateDayOffset" label="Effective Date Day Offset" type="number" minvalue="0"></vr-textbox>
+                        </vr-columns>
+                    </vr-row>
                 </vr-tab>
             </vr-tabs>
         </vr-form>
