--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Views/TrafficAnalysis/BlockedAttempts.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Views/TrafficAnalysis/BlockedAttempts.html
@@ -3,29 +3,11 @@
 
         <div ng-hide="filterSectionCollapsed" vr-loader="isLoading">
             <vr-row removeline>
-                <vr-columns width="fullrow">
-                    <vr-choices-filter selectedindex="selectedFilternIndex">
-                        <vr-choice-filter isselected="basicSelected">Basic</vr-choice-filter>
-                        <vr-choice-filter isselected="advancedSelected">Advanced</vr-choice-filter>
-                    </vr-choices-filter>
-
-                </vr-columns>
-            </vr-row>
-            <vr-row removeline>
                 <vr-timerange on-ready="onTimeRangeDirectiveReady" type="dateTime" width="normal" period="today" from="fromDate" to="toDate"></vr-timerange>
-                <span ng-show="advancedSelected">
-                    <vr-whs-be-switch-selector normal-col-num="2" on-ready="onSwitchDirectiveReady" ismultipleselection></vr-whs-be-switch-selectorv>
-                </span>
-                <span ng-show="advancedSelected">
-                    <vr-whs-be-customer-selector normal-col-num="2" ismultipleselection on-ready="onCustomerAccountDirectiveReady"></vr-whs-be-customer-selector>
-                </span>
-
-
-                <span ng-show="advancedSelected">
-                    <vr-whs-be-salezone-selector normal-col-num="2" ismultipleselection on-ready="onSaleZoneDirectiveReady" />
-                </span>
-
-                <vr-columns width="normal" ng-show="advancedSelected">
+                <vr-whs-be-switch-selector normal-col-num="2" on-ready="onSwitchDirectiveReady" ismultipleselection></vr-whs-be-switch-selector>
+                <vr-whs-be-customer-selector normal-col-num="2" ismultipleselection on-ready="onCustomerAccountDirectiveReady"></vr-whs-be-customer-selector>
+                <vr-whs-be-salezone-selector normal-col-num="2" ismultipleselection on-ready="onSaleZoneDirectiveReady" ></vr-whs-be-salezone-selector>
+                <vr-columns width="normal">
                     <vr-switch value="groupbyNumber" label="Group by Number"></vr-switch>
                 </vr-columns>
 
