fix vr-datetimepicker disabled mode layout
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43055

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -2022,6 +2022,9 @@ vr-datagrid[hideheader="true"] .vr-datagrid {
 .divDisabled vr-validator > div input[type="text"] {
    background-color:#ddd;
 }
+.divDisabled vr-validator > div input[type="text"].vr-date-input {
+    width: calc(100% + 9px);
+}
 .read-only-frame{
       pointer-events: none !important;
 }
