--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierRate/SupplierRateManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierRate/SupplierRateManagement.html
@@ -3,11 +3,14 @@
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
 
-                <vr-whs-be-carrieraccount-selector getsuppliers on-ready="onSupplierReady" normal-col-num="2" selectedvalues="selectedSupplier" isrequired="true" onselectitem="onSelectSupplier"></vr-whs-be-carrieraccount-selector>
+                <vr-whs-be-carrieraccount-selector getsuppliers on-ready="onSupplierReady" normal-col-num="2" selectedvalues="selectedSupplier" isrequired="true"></vr-whs-be-carrieraccount-selector>
 
+                <vr-columns width="normal" haschildcolumns>
+                    <vr-common-country-selector on-ready="onCountryReady" ismultipleselection></vr-common-country-selector>
+                </vr-columns>
 
-                <vr-columns width="normal" ng-show="selectedSupplier!=undefined" vr-loader="isLoadingSupplierZonesSelector" haschildcolumns>
-                    <vr-whs-be-supplierzone-selector ismultipleselection on-ready="onSupplierZoneDirectiveReady" selectedvalues="selectedSupplierZones"></vr-whs-be-supplierzone-selector>
+                <vr-columns width="normal">
+                    <vr-textbox value="supplierZoneName" label="Zone Name"></vr-textbox>
                 </vr-columns>
 
                 <vr-columns width="normal">
