--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
@@ -54,6 +54,16 @@
                     </vr-row>
 
                 </vr-tab>
+                <vr-tab header="'Invoice File Settings'">
+                    <vr-row>
+                        <vr-columns width="1/2row">
+                            <vr-section title="File Name Parts">
+                                <vr-invoicetype-filenameparts on-ready="scopeModel.onFileNamePartsReady"></vr-invoicetype-filenameparts>
+                            </vr-section>
+                        </vr-columns>
+                    </vr-row>
+
+                </vr-tab>
                 <vr-tab header="'Invoice Pre-Generate Actions'">
                     <vr-row>
                         <vr-columns width="fullrow">
