--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPInstance/Templates/BPInstanceHistoryGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPInstance/Templates/BPInstanceHistoryGridTemplate.html
@@ -10,5 +10,5 @@
     <vr-datagridcolumn headertext="'Last Message'" field="'Entity.LastMessage'" type="'Text'" widthfactor="40" expendablecolumn></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Retry'" field="'Entity.RetryCount'" widthfactor="5"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Event Time'" field="'Entity.CreatedTime'" type="'LongDatetime'" fixedwidth="'120'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" widthfactor="5" getcolor="getStatusColor"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'"  getcolor="getStatusColor" fixedwidth="'100'"></vr-datagridcolumn>
 </vr-datagrid>
