--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPInstance/Templates/BPInstanceMonitorGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPInstance/Templates/BPInstanceMonitorGridTemplate.html
@@ -6,7 +6,7 @@
                  idfield="Entity.ProcessInstanceID">
         <vr-datagridcolumn headertext="'ID'" field="'Entity.ProcessInstanceID'" disablesorting="true" widthfactor="5"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Title'" field="'Entity.Title'" type="'Text'" isclickable="true" onclicked="processInstanceClicked" disablesorting="true" widthfactor="15"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'"  getcolor="getStatusColor" disablesorting="true" widthfactor="5"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" getcolor="getStatusColor" disablesorting="true" fixedwidth="'100'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Created On'" field="'Entity.CreatedTime'" type="'LongDatetime'" disablesorting="true" fixedwidth="'120'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'User'" field="'UserName'" widthfactor="2"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Last Status Update'" field="'Entity.StatusUpdatedTime'" type="'LongDatetime'" disablesorting="true" fixedwidth="'120'"></vr-datagridcolumn>
