use fixedwidth option for Satus column
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43110

--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/ImportedBatchGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/ImportedBatchGridTemplate.html
@@ -12,7 +12,7 @@
     <vr-datagridcolumn headertext="'Records Count'" field="'RecordsCount'" widthfactor="3"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Mapping Result'" field="'MappingResultDescription'" widthfactor="5"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Mapper Message'" field="'MapperMessage'" widthfactor="17" expendablecolumn></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Execution Status'" field="'ExecutionStatusDescription'" getcolor="getStatusColor" widthfactor="5" disablesorting></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Execution Status'" field="'ExecutionStatusDescription'" getcolor="getStatusColor" fixedwidth="'100'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Log Entry Time'" field="'LogEntryTime'" type="'LongDatetime'" widthfactor="5"></vr-datagridcolumn>
 
     <vr-datagridexpandablerow>
