--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/DataRecordFieldFormulas/Templates/GatewayEvaluatorFieldFormulaTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/DataRecordFieldFormulas/Templates/GatewayEvaluatorFieldFormulaTemplate.html
@@ -1,1 +1,10 @@
-﻿
+﻿<vr-columns width="1/3row">
+    <vr-select datasource="fields"
+               datatextfield="fieldTitle"
+               datavaluefield="fieldName"
+               selectedvalues="selectedFieldName"
+               entityname="Field Name"
+               isrequired="true"
+               label="Port Field Name">
+    </vr-select>
+</vr-columns>
