Add SellingNumberPlan field to cost analysis grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43120

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteGridTemplate.html
@@ -8,7 +8,8 @@
                  defaultsortbyfieldname="'SaleZoneName'"
                  getrowstyle="getRowStyle" enableautoexport="true">
 
-        <vr-datagridcolumn headertext="'Routing Product'" field="'RoutingProductName'" disablesorting fixedwidth="100"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Routing Product'" field="'RoutingProductName'" disablesorting fixedwidth="150"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Selling Number Plan'" field="'SellingNumberPlan'" disablesorting fixedwidth="150"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Sale Zone'" field="'SaleZoneName'" fixedwidth="200"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Services'" disablesorting="true" fixedwidth="60">
             <vr-whs-be-services-viewer on-ready="dataItem.onServiceViewerReady"></vr-whs-be-services-viewer>
